--- a/hotels/index.html
+++ b/hotels/index.html
@@ -57,16 +57,16 @@
 			</ul>
 		</header>
 		<main>
+			<img style="width: 100vw; height: 100vh; object-fit: cover; position: fixed; z-index: 0;" src="./res/sea.jpg">
 			<div class="hotelContent">
-				<img style="width: 100%; height: 45px; object-fit: cover; position: absolute; z-index: -1;" src="./res/sea.jpg">
 				<ul class="hotelContentSelector">
 					<li id="selector-obecne" class="active" onclick="switchObecneInformace()">OBECNÉ INFORMACE</li>
 					<li id="selector-galerie" onclick="switchGalerie()">GALERIE</li>
 				</ul>
-				<div class="hotelData visible">
+				<div class="hotelData hotelContentFragment">
 					<h2 class="hotelData-name" style="color: #000000; width: 100%; text-align: center; margin-top: 50px;">Příprava na další pokračování...</h2>
 				</div>
-				<div class="hotelGallery invisible"></div>
+				<div class="hotelGallery invisible hotelContentFragment"></div>
 				<div class="hotelGalleryViewBlur"></div>
 				<div class="hotelGalleryView">
 					<img src="../hotels/res/left-arrow.png"/>
