--- a/about/index.html
+++ b/about/index.html
@@ -29,18 +29,18 @@
 		</div>
 		<header>
 			<ul>
-				<li class="logo"><a href="#"><img src="./res/logo.png"></a></li>
+				<li class="logo"><a><img src="./res/logo.png"></a></li>
 				<li class="button" style="--local_dropdown_menu_top: 1;">
 					<a href="./last-minute/">
 						<span>L</span><img src="./res/clock.png" style="padding: 2px"
 						                   width="25px"><span>ST MINUTE</span>
 					</a>
 				</li>
-				<li class="button" style="--local_dropdown_menu_top: 2;">
-					<a href="./info/"><span>INF</span><img src="./res/beach-ball.png" style="padding: 2px" width="25px"><span>RMACE</span></a>
+				<li class="button active" style="--local_dropdown_menu_top: 2;">
+					<a href="./about/"><img src="./res/beach-ball.png" style="padding: 2px" width="25px"><span>NÁS</span></a>
 				</li>
-				<li class="button active" style="--local_dropdown_menu_top: 3;">
-					<a href="./about/"><span>O NÁS</span></a>
+				<li class="button" style="--local_dropdown_menu_top: 3;">
+					<a href="#"><span>VYHLEDÁVÁNÍ</span></a>
 				</li>
 				<li class="button-call">
 					<a href="tel:+420 666 666 666"><img src="./res/phone.png"><span>+420 666 666 666</span></a>
