--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Výsledek vyhledávání</title>
     <link href="./res/logo.png" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="./css/global.css">
+    <script src="./scripts/antileak.js"></script>
     <style>
         html{
             min-width: 350px;
