--- a/about/index.html
+++ b/about/index.html
@@ -146,6 +146,9 @@ V Polsku vás čeká mnoho aktivit, které si můžete užít, jako například 
 				</div>
 			</div>
 			<div class="contact-layer">
+				<iframe style="background: #FFF;" width="560" height="315" src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+			<div class="contact-layer">
 				<form class="contact-form">
 					<table>
 						<tr>
