--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <a class="link-home" href="./last-minute/"><img src="./home.png"></a>
     <div class="data-layout">
         <div class="input-redirect">
-            <input type="text" name="r" id="r" placeholder="Jastrzębia Góra">
+            <input type="text" name="r" id="r" placeholder="Lokace nebo hotel">
             <img src="./search.png" alt="Search" id="search">
         </div>
         <div class="filtered-data">
